# genetic-algo

./: .gitignore  README.md  blend_optimization_results.csv  pyproject.toml  setup.py  single_objective_dumb.py  single_objective_smart.py  test_optimization_results.csv  test_optimization_results.json  test_so.py  test_so_smart.py
config/: default.yaml  development.yaml  production.yaml
docs/: architecture.md
examples/: agentic_reasoning_demo.py  basic_optimization.py  multi_objective_example.py
ga_optimizer/src/: genetic_algorithm.py  main.py  models.py  utils.py
requirements/: base.txt  development.txt
src/agents/: algorithm_selection_agent.py  base_agent.py  parameter_tuning_agent.py  problem_analysis_agent.py
src/algorithms/base/: optimizer.py  population_based.py
src/algorithms/genetic/: deap_ga.py  operators.py  selection.py
src/algorithms/hybrid/: ga_local_hybrid.py
src/cli/: main.py
src/cli/commands/: analyze_cmd.py  (+1 more)
src/config/: algorithm_configs.py  base.py  optimization_config.py
src/core/: exceptions.py  interfaces.py  types.py
src/domain/: models.py
src/evaluation/: base.py  fuel_evaluators.py  multi_objective.py
src/ga_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/initialization/: base.py  random_init.py  smart_seeding.py
src/services/: analysis_service.py  optimization_service.py  reporting_service.py
src/utils/: logging_utils.py  math_utils.py  serialization.py  visualization.py
tests/: test_ga_optimizer.py  test_genetic_algorithm.py
tests/unit/: test_genetic_algorithm.py
(+12 files in other folders)
