[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ga_optimizer"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A genetic algorithm for fuel blending optimization."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "scripts"]

[project.urls]
"Homepage" = "https://github.com/example/ga-optimizer"
"Bug Tracker" = "https://github.com/example/ga-optimizer/issues"
